--- a/to_do/to_do_list/templates/home.html
+++ b/to_do/to_do_list/templates/home.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% block content %}
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -8,3 +11,5 @@
     <h1>Home page</h1>
   </body>
 </html>
+
+{% endblock %}
