--- a/to_do/to_do_list/templates/home.html
+++ b/to_do/to_do_list/templates/home.html
@@ -5,7 +5,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>{% block title %} Home {% endblock %}</title>
   </head>
   <body>
     <h1>Home page</h1>
