working with django form

--- a/to_do_list/templates/base.html
+++ b/to_do_list/templates/base.html
@@ -27,8 +27,9 @@
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Enter to do item" aria-label="Search">
+      <form class="form-inline my-2 my-lg-0" method="POST">
+        {% csrf_token %}
+        <input class="form-control mr-sm-2" type="search" name="item" placeholder="Enter to do item" aria-label="Search">
         <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Add To List</button>
       </form>
     </div>
