--- a/to_do_list/templates/home.html
+++ b/to_do_list/templates/home.html
@@ -20,13 +20,13 @@
     {% if items.completed %}
       <tr class="table-success">
         <th class="striker"><center> {{ items.item }} </center></th>
-        <th><center> {{ items.completed }} </center></th>
+        <th><center>Pending</center></th>
         <th><center><a href="{% url 'delete' items.id %}">Delete</a></center></th>
       </tr>
     {% else %}
       <tr class="table-primary">
         <th><center> {{ items.item }} </center></th>
-        <th><center> {{ items.completed }} </center></th>
+        <th><center><a href="{% url 'done' items.id %}">Done</a></center></th>
         <th><center><a href="{% url 'delete' items.id %}">Delete</a></center></th>
       </tr>
       {% endif %}
